# invert-sfml

./: .gitignore  CMakeLists.txt  DebPack.cmake  README.md  TODO.md  config.h.in
scripts/: invert-gif  invert-import.sh
src/: CMakeLists.txt  invert.cpp  invert.h  invert_detail.h  invert_impl.h  invertnmp.cpp  invertnmp.h  main.cpp  ranges.h  ranges_const.h  transform.cpp  transform.h  utils.cpp  utils.h  workers.h
